tests/fail/expr/unsafe.rs
fn main() {
    one_assert::assert!(unsafe { 1 + 2 });
}
