tests/fail/expr/unsafe.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/unsafe.rs:2:34
  |
2 |     one_assert::assert!(unsafe { 1 + 2 });
  |                                  ^^^^^ expected `bool`, found integer
